fixing rows sticking out

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@
 
 #teamsters-col {
   display: block;
-  /*padding-bottom: 80px;*/
+  padding-bottom: 80px;
 }
 
 #team-social {
